--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,50 @@
         </h1>
       </header>
       <div class="container">
-        <section></section>
+        <section>
+          <div class="birthday-msg">
+            <h2>Happy birthday Betty! Forever young, forever stylish.</h2>
+            <p>Many, many best wishes today and everyday ❤️ Looking forward to belated celebrations!</p>
+          </div>
+          <!-- Start polaroid -->
+          <div class="polaroid right-tilt" data-rellax-speed="7" data-rellax-zindex="-1">
+            <div class="polaroid__container">
+              <figure>
+                <img src="https://via.placeholder.com/234" alt="Polariod picture" />
+              </figure>
+              <div class="polaroid__copy">
+                <p>Great drop!</p>
+              </div>
+            </div>
+          </div>
+          <!-- end polaroid -->
+
+          <!-- Start polaroid -->
+          <div class="polaroid left-tilt" data-rellax-speed="-4" data-rellax-zindex="-1">
+            <div class="polaroid__container">
+              <figure>
+                <img src="https://via.placeholder.com/234" alt="Polariod picture" />
+              </figure>
+              <div class="polaroid__copy">
+                <p>Great drop!</p>
+              </div>
+            </div>
+          </div>
+          <!-- end polaroid -->
+
+          <!-- Start polaroid -->
+          <div class="polaroid right-tilt" data-rellax-speed="2" data-rellax-zindex="-1">
+            <div class="polaroid__container">
+              <figure>
+                <img src="https://via.placeholder.com/234" alt="Polariod picture" />
+              </figure>
+              <div class="polaroid__copy">
+                <p>Great drop!</p>
+              </div>
+            </div>
+          </div>
+          <!-- end polaroid -->
+        </section>
         <section></section>
         <section></section>
       </div>
