--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,7 @@
         </h1>
       </header>
       <div class="container">
-        <section>
-          <div class="birthday-msg">
-            <h2>Happy birthday Betty! Forever young, forever stylish.</h2>
-            <p>Many, many best wishes today and everyday ❤️ Looking forward to belated celebrations!</p>
-          </div>
+        <section class="color-pink">
           <!-- Start polaroid -->
           <div class="polaroid right-tilt" data-rellax-speed="7" data-rellax-zindex="-1">
             <div class="polaroid__container">
@@ -33,6 +29,16 @@
             </div>
           </div>
           <!-- end polaroid -->
+          <div class="birthday-msg">
+            <h2>Happy birthday Betty! Forever young, forever stylish.</h2>
+            <p>
+              Many, many best wishes today and everyday Looking forward to belated celebrations!
+              <br />
+              ...
+              <br />
+              Rocky J
+            </p>
+          </div>
 
           <!-- Start polaroid -->
           <div class="polaroid left-tilt" data-rellax-speed="-4" data-rellax-zindex="-1">
@@ -41,27 +47,87 @@
                 <img src="https://via.placeholder.com/234" alt="Polariod picture" />
               </figure>
               <div class="polaroid__copy">
-                <p>Great drop!</p>
-              </div>
-            </div>
-          </div>
-          <!-- end polaroid -->
-
-          <!-- Start polaroid -->
-          <div class="polaroid right-tilt" data-rellax-speed="2" data-rellax-zindex="-1">
-            <div class="polaroid__container">
-              <figure>
-                <img src="https://via.placeholder.com/234" alt="Polariod picture" />
-              </figure>
-              <div class="polaroid__copy">
-                <p>Great drop!</p>
+                <p>Rocky + Adam xx</p>
               </div>
             </div>
           </div>
           <!-- end polaroid -->
         </section>
-        <section></section>
-        <section></section>
+        <section class="color-yellow">
+          <div class="birthday-msg text-left">
+            <p>
+              Happy Birthday! I hope you manage to have the special day you deserve, even in lockdown. I look forward to toasting the big day in person soon with a full tray of tequila shots!
+              <br />
+              ...
+              <br />
+              Lauren Kirk ❤️ xox
+            </p>
+          </div>
+          <!-- Start polaroid -->
+          <div class="polaroid right-tilt" data-rellax-speed="-2" data-rellax-zindex="-1">
+            <div class="polaroid__container">
+              <figure>
+                <img src="https://via.placeholder.com/234" alt="Polariod picture" />
+              </figure>
+              <div class="polaroid__copy">
+                <p>Rocky + Lauren xx</p>
+              </div>
+            </div>
+          </div>
+          <!-- end polaroid -->
+        </section>
+        <section class="color-pink">
+          <div class="birthday-msg text-left">
+            <p>
+              Happy Birthday Betty Brown! I hope you have an amazing day and look forward to toasting you soon. Thanks for being you, always being available to listen and never failing to provide a good laugh.
+              <br />
+              ...
+              <br />
+              Em xx
+            </p>
+          </div>
+
+          <div class="polaroid-collection">
+            <div class="container">
+              <!-- Start polaroid -->
+              <div class="polaroid left-tilt" data-rellax-speed="-4" data-rellax-zindex="-1">
+                <div class="polaroid__container">
+                  <figure>
+                    <img src="https://via.placeholder.com/234" alt="Polariod picture" />
+                  </figure>
+                  <div class="polaroid__copy">
+                    <p>...</p>
+                  </div>
+                </div>
+              </div>
+              <!-- end polaroid -->
+              <!-- Start polaroid -->
+              <div class="polaroid right-tilt" data-rellax-speed="-4" data-rellax-zindex="-1">
+                <div class="polaroid__container">
+                  <figure>
+                    <img src="https://via.placeholder.com/234" alt="Polariod picture" />
+                  </figure>
+                  <div class="polaroid__copy">
+                    <p>I'm on a a boat!</p>
+                  </div>
+                </div>
+              </div>
+              <!-- end polaroid -->
+              <!-- Start polaroid -->
+              <div class="polaroid left-tilt" data-rellax-speed="-4" data-rellax-zindex="-1">
+                <div class="polaroid__container">
+                  <figure>
+                    <img src="https://via.placeholder.com/234" alt="Polariod picture" />
+                  </figure>
+                  <div class="polaroid__copy">
+                    <p>...</p>
+                  </div>
+                </div>
+              </div>
+              <!-- end polaroid -->
+            </div>
+          </div>
+        </section>
       </div>
 
       <footer class="container">
