--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
           It's time to party<br />
           like it's 1999!
         </h1>
+        <div class="cupcake"></div>
       </header>
       <div class="container">
         <!-- SECTION BREAK - SECTION BREAK - SECTION BREAK - -->
@@ -82,6 +83,8 @@
           <div class="birthday-msg">
             <p>
               Happy birthday Bettina. I hope you have a fantastic birthday, which will be just the preliminary event for something much bigger when we get out of lockdown. I look forward to sharing a margarita or two soon to celebrate large and in style. <br />
+              <br />
+              <br />
               ...
               <br />
               Cheers Mark
@@ -91,6 +94,7 @@
             <div class="text-left">
               <p>
                 Happy birthday to one of my favourite people in the world. We have been friends for so long and enjoyed so many great moments over the years. Have a wonderful day and can’t wait to share a bottle of bubbles with you to celebrate.
+                <br />
                 <br />
                 ...
                 <br />
@@ -130,6 +134,7 @@
               <p>
                 Happy Birthday Betty. Looking forward to a big beaches session to celebrate! Hope you have a wonderful day.
                 <br />
+                <br />
                 ...
                 <br />
                 BC
@@ -141,38 +146,39 @@
             <div class="text-left">
               <p>
                 Dear BB, Wishing you a fabulous birthday just like you. Can’t wait to catch up in real life soon.<br />
+                <br />
                 ...
                 <br />
                 Big love Katie Love xxx
               </p>
             </div>
-
-            <!-- Start polaroid -->
-            <div class="polaroid left-tilt" data-rellax-speed="-4">
-              <div class="polaroid__container">
-                <figure>
-                  <img src="./images/polaroid/5.jpg" alt="Polariod picture" />
-                </figure>
-                <div class="polaroid__copy">
-                  <p>K Love</p>
+            <div style="position: relative">
+              <!-- Start polaroid -->
+              <div class="polaroid left-tilt" data-rellax-speed="-4">
+                <div class="polaroid__container">
+                  <figure>
+                    <img src="./images/polaroid/5.jpg" alt="Polariod picture" />
+                  </figure>
+                  <div class="polaroid__copy">
+                    <p>K Love</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <!-- end polaroid -->
-          </div>
-
-          <!-- Start polaroid -->
-          <div class="polaroid right-tilt" data-rellax-speed="-4" style="margin-left: auto; top: -100px">
-            <div class="polaroid__container">
-              <figure>
-                <img src="./images/polaroid/6.jpg" alt="Polariod picture" />
-              </figure>
-              <div class="polaroid__copy">
-                <p>K Love</p>
+              <!-- end polaroid -->
+              <!-- Start polaroid -->
+              <div class="polaroid right-tilt k-love" data-rellax-speed="-4">
+                <div class="polaroid__container">
+                  <figure>
+                    <img src="./images/polaroid/6.jpg" alt="Polariod picture" />
+                  </figure>
+                  <div class="polaroid__copy">
+                    <p>K Love</p>
+                  </div>
+                </div>
               </div>
+              <!-- end polaroid -->
             </div>
           </div>
-          <!-- end polaroid -->
         </section>
 
         <!-- SECTION BREAK - SECTION BREAK - SECTION BREAK - -->
@@ -191,7 +197,7 @@
             </p>
           </div>
           <!-- Start polaroid -->
-          <div class="polaroid left-tilt" data-rellax-speed="-4" style="margin-left: auto">
+          <div class="polaroid left-tilt" data-rellax-speed="-4" style="margin-left: auto; margin-right: inherit !important">
             <div class="polaroid__container">
               <figure>
                 <img src="./images/polaroid/7.jpg" alt="Polariod picture" />
@@ -206,7 +212,7 @@
           <div class="col-two">
             <!-- Start polaroid -->
             <div class="polaroid left-tilt" data-rellax-speed="-4">
-              <div class="polaroid__container">
+              <div class="polaroid__container" style="margin-left: auto">
                 <figure>
                   <img src="./images/polaroid/8.jpg" alt="Polariod picture" />
                 </figure>
@@ -219,6 +225,7 @@
             <div class="text-left">
               <p>
                 Wishing you a VERY happy milestone birthday lady. Looking forward to celebrating in style as soon as we can. <br />
+                <br />
                 ...
                 <br />
                 Alice x
@@ -315,8 +322,8 @@
 
           <div class="col-two">
             <!-- Start polaroid -->
-            <div class="polaroid right-tilt" data-rellax-speed="-4">
-              <div class="polaroid__container">
+            <div class="polaroid left-tilt" data-rellax-speed="-4">
+              <div class="polaroid__container" style="margin-left: auto">
                 <figure>
                   <img src="./images/polaroid/13.jpg" alt="Polariod picture" />
                 </figure>
@@ -330,6 +337,7 @@
               <p>
                 Happy birthday Betty! Forever young, forever stylish. Many, many best wishes today and everyday ❤️ Looking forward to belated celebrations!
                 <br />
+                <br />
                 ...
                 <br />
                 Rocky J
@@ -341,6 +349,7 @@
             <div class="text-left">
               <p>
                 Happy Birthday! I hope you manage to have the special day you deserve, even in lockdown. I look forward to toasting the big day in person soon with a full tray of tequila shots! <br />
+                <br />
                 ...
                 <br />
                 Lauren Kirk ❤️ xox
@@ -349,7 +358,7 @@
 
             <!-- Start polaroid -->
             <div class="polaroid right-tilt" data-rellax-speed="-4">
-              <div class="polaroid__container">
+              <div class="polaroid__container" style="margin-right: auto; margin-left: inherit">
                 <figure>
                   <img src="./images/polaroid/14.jpg" alt="Polariod picture" />
                 </figure>
@@ -1020,10 +1029,13 @@
 
       <footer class="container">
         <div class="center">
-          <h3>Here's Cheers BB!</h3>
-          <p>Wishing you a very happy birthday BB. We all wish we could be with you to celebrate and raise a glass or 2 with you. Lots of love, your News family.</p>
+          <h3 class="scribblefont">Here's Cheers BB!</h3>
+          <p>
+            Wishing you a very happy birthday BB. We all wish we could be with you to celebrate and raise a glass or 2 with you.<br />
+            Lots of love, your News family.
+          </p>
         </div>
-        <h4>Made with love by Roller Xoxo</h4>
+        <h4 class="scribblefont">Made with love by Roller Xoxo</h4>
       </footer>
     </main>
   </body>
