ben english quote

--- a/src/index.html
+++ b/src/index.html
@@ -53,13 +53,14 @@
           </div>
 
           <div class="birthday-msg">
-            <h2>La la</h2>
+            <h2>Yo Betty Boo,</h2>
             <p>
-              La la
+              The good thing about this milestone is that you’re allowed to be as grumpy as you like and no longer give a toss what anyone thinks about it. There are also some bad things but it’s best not to mention them. Have a brilliant day and try not to be too graceful about it.
+              <br />
               <br />
               ...
               <br />
-              Ben English
+              Ben English xxoo
             </p>
           </div>
 
